k8s-statefulset-simple/kuard.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kuard
spec:
  clusterIP: None
  selector:
    app: kuard
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: kuard-web
spec:
  type: ClusterIP
  selector:
    app: kuard
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kuard
spec:
  serviceName: kuard
  replicas: 3
  selector:
    matchLabels:
      app: kuard
  template:
    metadata:
      labels:
        app: kuard
    spec:
      containers:
        - name: kuard
          image: ongoonku/kuard-amd64:1
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            limits:
              memory: 200Mi
              cpu: "0.2"
            requests:
              memory: 100Mi
              cpu: "0.1"
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        storageClassName: local-path
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 100Mi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard
spec:
  ingressClassName: traefik
  rules:
    - host: kuard.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kuard-web
                port:
                  number: 8080
